--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 streamlit>=1.33.0
-pandas>==2.2.0
-matplotlib>==3.8.2
-seaborn>==0.13.2
-folium>==0.16.0
-openpyxl>==3.1.2
-streamlit_folium    
-plotly.express                        
+pandas>=2.2.0
+matplotlib>=3.8.2
+seaborn>=0.13.2
+folium>=0.16.0
+openpyxl>=3.1.2
+streamlit_folium>=0.12.0
+plotly.express>=4.18.0
 plotly.io
 html
+numpy>=1.26.0
+scipy>=1.11.0
