--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,5 @@ matplotlib>=3.8.2
 seaborn>=0.13.2
 folium>=0.16.0
 openpyxl>=3.1.2
-streamlit_folium>=0.12.0
-plotly.express>=4.0.0
-plotly.io
-numpy>=1.26.0
-scipy>=1.11.0
+streamlit_folium>=0.20.0
+plotly>=4.18.0
